Line estimation example

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,8 @@
 cmake_minimum_required(VERSION 2.8 FATAL_ERROR)
 
-project(gtest-demo)
+project(robest CXX)
 
-enable_language(C)
-enable_language(CXX)
+set(CMAKE_CXX_STANDARD 11)
 
 if(CMAKE_CXX_COMPILER_ID MATCHES GNU)
     set(CMAKE_CXX_FLAGS         "-Wall -Wno-unknown-pragmas -Wno-sign-compare -Woverloaded-virtual -Wwrite-strings -Wno-unused")
@@ -14,24 +13,22 @@ endif()
 
 include_directories(
     ${PROJECT_SOURCE_DIR}/src
-    )
+)
 
-add_library(
-    example
-    src/example.cpp
-    )
+add_library(robest INTERFACE)
+target_include_directories(robest INTERFACE src/)
 
 set(GOOGLETEST_ROOT 3rdparty/googletest/googletest CACHE STRING "Google Test source root")
 
 include_directories(
     ${PROJECT_SOURCE_DIR}/${GOOGLETEST_ROOT}
     ${PROJECT_SOURCE_DIR}/${GOOGLETEST_ROOT}/include
-    )
+)
 
 set(GOOGLETEST_SOURCES
     ${PROJECT_SOURCE_DIR}/${GOOGLETEST_ROOT}/src/gtest-all.cc
     ${PROJECT_SOURCE_DIR}/${GOOGLETEST_ROOT}/src/gtest_main.cc
-    )
+)
 
 foreach(_source ${GOOGLETEST_SOURCES})
     set_source_files_properties(${_source} PROPERTIES GENERATED 1)
@@ -41,17 +38,18 @@ add_library(googletest ${GOOGLETEST_SOURCES})
 
 add_executable(
     unit_tests
-    test/main.cpp
-    test/example_add.cpp
-    test/example_subtract.cpp
-    )
+    tests/main.cpp
+    tests/test_LineFitting.cpp
+    tests/LineFitting/LineFitting.cpp
+    tests/LineFitting/LineFitting.hpp
+)
 
 add_dependencies(unit_tests googletest)
 
 target_link_libraries(
     unit_tests
     googletest
-    example
+    robest
     pthread
     )
 
