--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -43,10 +43,13 @@ add_executable(
     tests/main.cpp
     tests/test_LineFitting.cpp
     tests/test_CircleFitting.cpp
+    tests/test_SphereFitting.cpp
     tests/LineFitting/LineFitting.cpp
     tests/LineFitting/LineFitting.hpp
     tests/CircleFitting/CircleFitting.cpp
     tests/CircleFitting/CircleFitting.hpp
+    tests/SphereFitting/SphereFitting.cpp
+    tests/SphereFitting/SphereFitting.hpp
 )
 
 add_dependencies(unit_tests googletest)
